RESOLVED FIXED310766
Fix copy/paste mistake in StreamConnectionBuffer::maximumSize()
https://bugs.webkit.org/show_bug.cgi?id=310766
Summary Fix copy/paste mistake in StreamConnectionBuffer::maximumSize()
Chris Dumez
Reported 2026-03-25 21:05:51 PDT
Fix copy/paste mistake in StreamConnectionBuffer::maximumSize().
Attachments
Chris Dumez
Comment 1 2026-03-25 21:07:26 PDT
EWS
Comment 2 2026-03-26 02:07:00 PDT
Committed 309973@main (942635d3ce50): <https://commits.webkit.org/309973@main> Reviewed commits have been landed. Closing PR #61373 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-26 02:08:14 PDT
Note You need to log in before you can comment on or make changes to this bug.