Fix copy/paste mistake in StreamConnectionBuffer::maximumSize() https://bugs.webkit.org/show_bug.cgi?id=310766

Reviewed by Kimmo Kinnunen.

The code was using `ClientOffset::serverIsSleepingTag` twice in std::min(),
which did not make sense. No impact at the moment but still a copy/paste
mistake which could cause trouble in the future.

* Source/WebKit/Platform/IPC/StreamConnectionBuffer.h:
(IPC::StreamConnectionBuffer::maximumSize):

Canonical link: https://commits.webkit.org/309973@main